--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,7 @@ fieldset, label { margin: 0; padding: 0; }
 body {
 	font-family: 'Merriweather Light 300', 'Times New Roman', serif;
 	/*'Merriweather Sans Regular', Arial, sans-serif;*/
+	background-color: #e8eded;
 }
 
 h1 { 
@@ -17,6 +18,7 @@ header {
 	width:100%;
 	background-color: white;
 	display: inline-block;
+
 }
 
 .shadow {
@@ -34,12 +36,12 @@ header {
 	left:300px;
 }
 .howTo {
-	background-color: gray;
 	position: absolute;
 	top:150px;
 	left:550px; 
 	padding:10px;
 	width:300px;
+	z-index: 99999;
 }
 
 .modal_child {
@@ -47,6 +49,7 @@ header {
 	background-color: white;
 	margin: 2%;
 	padding:10px;
+	z-index: 99999;
 }
 
 .modal_child button {
@@ -107,11 +110,17 @@ li {
 
 .photo {
 	display: inline-block;
-	margin-left:3px;
-	margin-right:3px;
+	width:25%;
+	height:240px;
+	/*padding: 10px;*/
+	border-right: 1px solid white; 
+	border-bottom: 1px solid white; 
+/*	margin-left:3px;
+	margin-right:3px;*/
 }
 .tags {
-	background-color: rgb(172, 32, 35);
+	/*background-color: rgb(172, 32, 35);*/
+	background-color: white;
 	padding:1%;
 }
 
@@ -236,17 +245,20 @@ button.button-primary, input[type="submit"].button-primary, input[type="reset"].
 
 /***********************/
 .thumbnail {
-	width:200px;
+	width:75%;
 	height:auto;
+	margin-left: 15%;
 }
 
 .thumbnail_label{
-	background-color: white;
+	padding: 10px;
+	margin-bottom: 20%;
 }
 .thumbnails {
-	display: inline-block;
-	float: left;
+	/*display: inline-block;
+	float: left;*/
 	margin-top: 1%;
+	border: 1px solid white;
 }
 
 
