--- a/styles/main.css
+++ b/styles/main.css
@@ -96,11 +96,10 @@ a {
     border-right: 1px solid white;
 } 
 
-.list-group {
-	margin-top:3%;
-}
+
 ul {
 	list-style-type: none;
+	margin-top: 2%;
 }
 
 li {
@@ -112,7 +111,6 @@ li {
 	display: inline-block;
 	width:25%;
 	height:240px;
-	/*padding: 10px;*/
 	border-right: 1px solid white; 
 	border-bottom: 1px solid white; 
 /*	margin-left:3px;
@@ -124,7 +122,7 @@ li {
 	padding:1%;
 }
 
-.tag{
+.tag {
 	background-color: white;
 	color: rgb(172, 32, 35);
 	border-color: rgb(172, 32, 35);
@@ -132,12 +130,13 @@ li {
 
 .btn-primary {
     color: #fff;
-    background-color: rgb(172, 32, 35);
-    border-color: rgb(172, 32, 35);
+    background-color: #829aa8;
+    border: 1px solid #677c89;
+    border-bottom-color: #6b808d;
 }
 
 
-button.button-primary, input[type="submit"].button-primary, input[type="reset"].button-primary, input[type="button"].button-primary {
+#semantic button.button-primary, button.button-primary, input[type="submit"].button-primary, input[type="reset"].button-primary, input[type="button"].button-primary {
     color: #FFF;
     background-color: #d3d3d3;
     border-color: grey;
@@ -152,24 +151,78 @@ button.button-primary, input[type="submit"].button-primary, input[type="reset"].
 .download {
 	float: right;
 }
-/****** new imgs styles *****/
+/****** new album styles *****/
+.banner {
+	padding: 15px;
+	background-color: white;
+	border-bottom: 1px solid #6b808d;
+	height:auto;
+
+}
+
+.addImg_buttons {
+	display:block;
+}
+.logo {
+	width:80%;
+	height:auto;
+	margin-bottom: 15%;
+}
+.container {
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    position: fixed;
+}
+
+.current_thumbnails {
+	margin-left: 5%;
+	margin-right: 5%;
+	margin-top: 3%;
+	border: 1px solid white;
+	padding: 10px;
+}
+.imgBox_info {
+	width: 45%;
+    display: inline-block;
+    margin-left: 10px;
+}
+
+.left_col {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 30%;
+    height: 100%;
+    background-color: white;
+    padding-top: 2%;
+    padding-left: 3%
+}
+.right_col {
+    position: absolute;
+    top: 0;
+    left: 30%;
+    width: 70%;
+    height: 100%;
+    background-color: #e8eded;;
+}
+
 .newTags{
 	width:100%;
 	margin-top: 5px;
 	height: 118px;
 	padding:1%;
-	border:1px solid grey;
+/*	border:1px solid grey;*/
+	background-color: white
 }
 .newImgName {
 	width:100%;
 	height: 30px;
 	padding:1%;
-	border:1px solid grey;
+/*	border:1px solid grey;*/
+	background-color: white
 }
-.newThumbnail {
-	
-	margin-right: 2px;
-	/*border: 1px solid black;*/
+.imgBox_photo {
 	height: 180px;
     background-size: cover;
     background-repeat: no-repeat;
@@ -183,6 +236,7 @@ button.button-primary, input[type="submit"].button-primary, input[type="reset"].
 	width: 100%;
 	height:180px;
 	margin-bottom: 2%;
+	display:inline-block;
 }
 .imgText {
 	vertical-align: text-bottom;
@@ -194,11 +248,6 @@ button.button-primary, input[type="submit"].button-primary, input[type="reset"].
 	display:inline-block;
 	font-weight: bold;
 }
-
-.list {
-	display: block;
-}
-
 
 .inline-block{
 	display:inline-block;
@@ -265,4 +314,9 @@ button.button-primary, input[type="submit"].button-primary, input[type="reset"].
 
 .invisible {
 	display:none;
+}
+
+
+.button-primary {
+	background-color: #ff5144;
 }
