--- a/styles/main.css
+++ b/styles/main.css
@@ -5,56 +5,27 @@ fieldset, label { margin: 0; padding: 0; }
 
 body {
 	font-family: 'Merriweather Light 300', 'Times New Roman', serif;
-	/*'Merriweather Sans Regular', Arial, sans-serif;*/
 	background-color: #e8eded;
 }
 
-h1 { 
-	font-size: 1.5em; 
-	margin: 10px; 
-}
+/*INDEX STYLES-GENERAL*/
+	/*INDEX-HEADER*/
+	h1 { 
+		font-size: 1.5em; 
+		margin: 10px; 
+	}
 
-header {
-	width:100%;
-	background-color: white;
-	display: inline-block;
+	header {
+		width:100%;
+		background-color: white;
+		display: inline-block;
 
-}
+	}
+	a {
+		color:black;
 
-.shadow {
-	-webkit-box-shadow: 10px 10px 129px 32px rgba(19,135,237,1);
-	-moz-box-shadow: 10px 10px 129px 32px rgba(19,135,237,1);
-	box-shadow: 10px 10px 129px 32px rgba(19,135,237,1);
-}
+	}
 
-.right {
-	position: relative;
-	right:400px;
-}
-.mleft {
-	position: relative;
-	left:300px;
-}
-.howTo {
-	position: absolute;
-	top:150px;
-	left:550px; 
-	padding:10px;
-	width:300px;
-	z-index: 99999;
-}
-
-.modal_child {
-	border:1px solid black;
-	background-color: white;
-	margin: 2%;
-	padding:10px;
-	z-index: 99999;
-}
-
-.modal_child button {
-	margin-left: 48%;
-}
 #loading {
 	visibility: hidden;
 	position: absolute;
@@ -64,37 +35,27 @@ header {
 	padding:10px;
 	box-shadow: 0 0 5px rgba(0,0,0,.75);
 }
-.upload_header {
-	margin-bottom: 2%;
-	margin-top: 1%;
-}
-.upload_nav {
-	background-color: rgb(172, 32, 35);
-}
 
-a {
-	color:black;
 
-}
 
-.navbar-default .navbar-nav>li>a {
-    color: black;
-}
-.navbar-default {
-    background-color: rgb(172, 32, 35);
-    border-color: rgb(172, 32, 35);
-}
-.divider {
-	width:35%;
-}
-.nav__item{
-	color:white;
-	font-size:14pt;
-}
-.nav_logo {    
-    width: 30%;
-    border-right: 1px solid white;
-} 
+
+	.navbar-default .navbar-nav>li>a {
+	    color: black;
+	}
+	.navbar-default {
+	    background-color: rgb(172, 32, 35);
+	    border-color: rgb(172, 32, 35);
+	}
+
+	.nav__item{
+		color:white;
+		font-size:14pt;
+		float: right;
+	}
+	.nav_logo {    
+	    width: 30%;
+	    border-right: 1px solid white;
+	} 
 
 
 ul {
@@ -319,4 +280,41 @@ li {
 
 .button-primary {
 	background-color: #ff5144;
+}
+
+
+/*HOW TO STYLES*/
+.shadow {
+	-webkit-box-shadow: 10px 10px 129px 32px rgba(19,135,237,1);
+	-moz-box-shadow: 10px 10px 129px 32px rgba(19,135,237,1);
+	box-shadow: 10px 10px 129px 32px rgba(19,135,237,1);
+}
+
+.right {
+	position: relative;
+	right:400px;
+}
+.mleft {
+	position: relative;
+	left:300px;
+}
+.howTo {
+	position: absolute;
+	top:150px;
+	left:550px; 
+	padding:10px;
+	width:300px;
+	z-index: 99999;
+}
+
+.modal_child {
+	border:1px solid black;
+	background-color: white;
+	margin: 2%;
+	padding:10px;
+	z-index: 99999;
+}
+
+.modal_child button {
+	margin-left: 48%;
 }
