--- a/styles/main.css
+++ b/styles/main.css
@@ -11,7 +11,10 @@ body {
 ul {
 	list-style-type: none;
 	/*margin-top: 2%;*/
-	}
+}
+.invisible {
+	display:none;
+}
 
 /*li {
 	display: inline-block;
@@ -20,226 +23,266 @@ ul {
 
 /*INDEX STYLES-GENERAL*/
 	/*INDEX-HEADER*/
-	h1 { 
-		font-size: 1.5em; 
-		margin: 10px; 
-	}
+		h1 { 
+			font-size: 1.5em; 
+			margin: 10px; 
+		}
 
-	header {
-		width:100%;
-		background-color: white;
-		display: inline-block;
+		header {
+			width:100%;
+			background-color: white;
+			display: inline-block;
 
-	}
-	.nav>li {
-	    position: relative;
-	    display: inline-block;
-	}
-	.navbar-default .navbar-nav>li>a, a{
-	    color: black;
-	}
-	.navbar-default {
-	    background-color: rgb(172, 32, 35);
-	    border-color: rgb(172, 32, 35);
-	}
-
-	.nav__item{
-		color:white;
-		font-size:14pt;
-		float: right;
-
-	}
-	.nav_logo {    
-	    width: 30%;
-	    border-right: 1px solid white;
-	} 
-	
+		}
+		.nav>li {
+		    position: relative;
+		    display: inline-block;
+		}
+		.navbar-default .navbar-nav>li>a, a{
+		    color: black;
+		}
+		.navbar-default {
+		    background-color: rgb(172, 32, 35);
+		    border-color: rgb(172, 32, 35);
+		}
+		.nav__item{
+			color:white;
+			font-size:14pt;
+			float: right;
+		}
+		.nav_logo {    
+		    width: 30%;
+		    border-right: 1px solid white;
+		} 
 	/*INDEX-HEADER*/
 
 	/*INDEX-SPINNER*/
-	#loading {
-		visibility: hidden;
-		position: absolute;
-		top:200px;
-		left:400px; 
+		#loading {
+			visibility: hidden;
+			position: absolute;
+			top:200px;
+			left:400px; 
+			background-color: white;
+			padding:10px;
+			box-shadow: 0 0 5px rgba(0,0,0,.75);
+		}
+	/*INDEX-TAGS*/
+		.tags {
+			background-color: white;
+			padding:1%;
+		}
+
+		.tag {
+			background-color: white;
+			color: rgb(172, 32, 35);
+			border-color: rgb(172, 32, 35);
+		}
+		.button-primary, button.button-primary, input[type="submit"].button-primary, input[type="reset"].button-primary, input[type="button"].button-primary {
+			color: #FFF;
+			background-color: #d3d3d3;
+			border-color: grey;
+		}
+		.button.button-primary:hover, button.button-primary:hover, input[type="submit"].button-primary:hover, input[type="reset"].button-primary:hover, input[type="button"].button-primary:hover, .button.button-primary:focus, button.button-primary:focus, input[type="submit"].button-primary:focus, input[type="reset"].button-primary:focus, input[type="button"].button-primary:focus {
+			color: #FFF;
+			background-color: #D8D8D8;
+			border-color: grey;
+		}
+		.btn-primary {
+		    color: #fff;
+		    background-color: #829aa8;
+		    border: 1px solid #677c89;
+		    border-bottom-color: #6b808d;
+		}
+	/*INDEX-THUMBNAILS*/
+	.download {
+		float: right;
 		background-color: white;
-		padding:10px;
-		box-shadow: 0 0 5px rgba(0,0,0,.75);
+	}
+	.thumbnails {
+		margin-top: 1%;
+		border: 1px solid white;
+	}
+	.thumbnail {
+		width:75%;
+		height:auto;
+		margin-left: 15%;
+	}
+	.photo {
+		display: inline-block;
+		width:25%;
+		height:240px;
+		border-right: 1px solid white; 
+		border-bottom: 1px solid white; 
+	}
+	.thumbnail_label{
+		padding: 10px;
+		margin-bottom: 20%;
 	}
 
+/*HOW TO STYLES*/
+	.shadow {
+		-webkit-box-shadow: 10px 10px 129px 32px rgba(19,135,237,1);
+		-moz-box-shadow: 10px 10px 129px 32px rgba(19,135,237,1);
+		box-shadow: 10px 10px 129px 32px rgba(19,135,237,1);
+	}
+	.left {
+			float: right;
+		}
+	.right {
+		position: relative;
+		right:400px;
+	}
+	.mleft {
+		position: relative;
+		left:300px;
+	}
+	.howTo {
+		position: absolute;
+		top:150px;
+		left:550px; 
+		padding:10px;
+		width:300px;
+		z-index: 99999;
+	}
 
+	.modal_child {
+		border:1px solid black;
+		background-color: white;
+		margin: 2%;
+		padding:10px;
+		z-index: 99999;
+	}
 
-.photo {
-	display: inline-block;
-	width:25%;
-	height:240px;
-	border-right: 1px solid white; 
-	border-bottom: 1px solid white; 
-}
-.tags {
-	/*background-color: rgb(172, 32, 35);*/
-	background-color: white;
-	padding:1%;
-}
+	.modal_child button {
+		margin-left: 48%;
+	}
+/*HOW TO STYLES*/
+/**CREATE ALBUM STYLES *****/
+	.banner {
+		padding: 15px;
+		background-color: white;
+		border-bottom: 1px solid #6b808d;
+		height:auto;
 
-.tag {
-	background-color: white;
-	color: rgb(172, 32, 35);
-	border-color: rgb(172, 32, 35);
-}
+	}
 
-.btn-primary {
-    color: #fff;
-    background-color: #829aa8;
-    border: 1px solid #677c89;
-    border-bottom-color: #6b808d;
-}
+	.addImg_buttons {
+		display:block;
+	}
+	.logo {
+		width:80%;
+		height:auto;
+		margin-bottom: 15%;
+	}
+	.container {
+	    height: 100%;
+	    width: 100%;
+	    background-color: black;
+	    position: fixed;
+	}
 
+	.current_thumbnails {
+		margin-left: 5%;
+		margin-right: 5%;
+		margin-top: 3%;
+		border: 1px solid white;
+		padding: 10px;
+	}
+	.imgBox_info {
+		width: 45%;
+	    display: inline-block;
+	    margin-left: 10px;
+	}
 
-#semantic button.button-primary, button.button-primary, input[type="submit"].button-primary, input[type="reset"].button-primary, input[type="button"].button-primary {
-    color: #FFF;
-    background-color: #d3d3d3;
-    border-color: grey;
-}
+	.left_col {
+	    position: absolute;
+	    top: 0;
+	    left: 0;
+	    width: 30%;
+	    height: 100%;
+	    background-color: white;
+	    padding-top: 2%;
+	    padding-left: 3%
+	}
+	.right_col {
+	    position: absolute;
+	    top: 0;
+	    left: 30%;
+	    width: 70%;
+	    height: 100%;
+	    background-color: #e8eded;;
+	}
 
-.button.button-primary:hover, button.button-primary:hover, input[type="submit"].button-primary:hover, input[type="reset"].button-primary:hover, input[type="button"].button-primary:hover, .button.button-primary:focus, button.button-primary:focus, input[type="submit"].button-primary:focus, input[type="reset"].button-primary:focus, input[type="button"].button-primary:focus {
-    color: #FFF;
-    background-color: #D8D8D8;
-    border-color: grey;
-}
+	.newTags{
+		width:100%;
+		margin-top: 5px;
+		height: 118px;
+		padding:1%;
+	/*	border:1px solid grey;*/
+		background-color: white
+	}
+	.newImgName {
+		width:100%;
+		height: 30px;
+		padding:1%;
+	/*	border:1px solid grey;*/
+		background-color: white
+	}
+	.imgBox_photo {
+		height: 180px;
+	    background-size: cover;
+	    background-repeat: no-repeat;
+	    background-position: 50% 50%;
+	}
+	/*background-image: url("http://i.stack.imgur.com/2OrtT.jpg");
+	    background-size: cover;
+	    background-repeat: no-repeat;
+	    background-position: 50% 50%;*/
+	.imgBox {
+		width: 100%;
+		height:180px;
+		margin-bottom: 2%;
+		display:inline-block;
+	}
+	.imgText {
+		vertical-align: text-bottom;
+		color: white;
 
-.download {
-	float: right;
-}
-/****** new album styles *****/
-.banner {
-	padding: 15px;
-	background-color: white;
-	border-bottom: 1px solid #6b808d;
-	height:auto;
+	}
 
-}
+	.title {
+		display:inline-block;
+		font-weight: bold;
+	}
 
-.addImg_buttons {
-	display:block;
-}
-.logo {
-	width:80%;
-	height:auto;
-	margin-bottom: 15%;
-}
-.container {
-    height: 100%;
-    width: 100%;
-    background-color: black;
-    position: fixed;
-}
-
-.current_thumbnails {
-	margin-left: 5%;
-	margin-right: 5%;
-	margin-top: 3%;
-	border: 1px solid white;
-	padding: 10px;
-}
-.imgBox_info {
-	width: 45%;
-    display: inline-block;
-    margin-left: 10px;
-}
-
-.left_col {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 30%;
-    height: 100%;
-    background-color: white;
-    padding-top: 2%;
-    padding-left: 3%
-}
-.right_col {
-    position: absolute;
-    top: 0;
-    left: 30%;
-    width: 70%;
-    height: 100%;
-    background-color: #e8eded;;
-}
-
-.newTags{
-	width:100%;
-	margin-top: 5px;
-	height: 118px;
-	padding:1%;
-/*	border:1px solid grey;*/
-	background-color: white
-}
-.newImgName {
-	width:100%;
-	height: 30px;
-	padding:1%;
-/*	border:1px solid grey;*/
-	background-color: white
-}
-.imgBox_photo {
-	height: 180px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-}
-/*background-image: url("http://i.stack.imgur.com/2OrtT.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;*/
-.imgBox {
-	width: 100%;
-	height:180px;
-	margin-bottom: 2%;
-	display:inline-block;
-}
-.imgText {
-	vertical-align: text-bottom;
-	color: white;
-
-}
-
-.title {
-	display:inline-block;
-	font-weight: bold;
-}
-
-.inline-block{
-	display:inline-block;
-}
-.left {
-	float: right;
-}
-
+	.inline-block{
+		display:inline-block;
+	}
+	
 /****** Style Star Rating Widget *****/
-.rating { 
-  border: none;
-  float: left;
-}
+	.rating { 
+	  border: none;
+	  float: left;
+	}
 
-.rating > input { display: none; } 
-.rating > label:before { 
-  margin: 5px;
-  font-size: 1.25em;
-  font-family: FontAwesome;
-  display: inline-block;
-  content: "\f005";
-}
+	.rating > input { display: none; } 
+	.rating > label:before { 
+	  margin: 5px;
+	  font-size: 1.25em;
+	  font-family: FontAwesome;
+	  display: inline-block;
+	  content: "\f005";
+	}
 
-.rating > .half:before { 
-  content: "\f089";
-  position: absolute;
-}
+	.rating > .half:before { 
+	  content: "\f089";
+	  position: absolute;
+	}
 
-.rating > label { 
-  color: #ddd; 
- float: right; 
-}
+	.rating > label { 
+	  color: #ddd; 
+	 float: right; 
+	}
 
 /***** CSS Magic to Highlight Stars on Hover *****/
 
@@ -253,67 +296,4 @@ ul {
 .rating > input:checked ~ label:hover ~ label { color: #FFED85;  } 
 
 /***********************/
-.thumbnail {
-	width:75%;
-	height:auto;
-	margin-left: 15%;
-}
 
-.thumbnail_label{
-	padding: 10px;
-	margin-bottom: 20%;
-}
-.thumbnails {
-	/*display: inline-block;
-	float: left;*/
-	margin-top: 1%;
-	border: 1px solid white;
-}
-
-
-
-.invisible {
-	display:none;
-}
-
-
-.button-primary {
-	background-color: #ff5144;
-}
-
-
-/*HOW TO STYLES*/
-.shadow {
-	-webkit-box-shadow: 10px 10px 129px 32px rgba(19,135,237,1);
-	-moz-box-shadow: 10px 10px 129px 32px rgba(19,135,237,1);
-	box-shadow: 10px 10px 129px 32px rgba(19,135,237,1);
-}
-
-.right {
-	position: relative;
-	right:400px;
-}
-.mleft {
-	position: relative;
-	left:300px;
-}
-.howTo {
-	position: absolute;
-	top:150px;
-	left:550px; 
-	padding:10px;
-	width:300px;
-	z-index: 99999;
-}
-
-.modal_child {
-	border:1px solid black;
-	background-color: white;
-	margin: 2%;
-	padding:10px;
-	z-index: 99999;
-}
-
-.modal_child button {
-	margin-left: 48%;
-}
