--- a/styles/main.css
+++ b/styles/main.css
@@ -216,7 +216,12 @@ ul {
 	    height: 100%;
 	    background-color: #e8eded;;
 	}
-
+	.list-group-item {
+		display: block;
+   		max-width: 80%;
+    	margin-top: 4%;
+	}
+	
 	.newTags{
 		width:100%;
 		margin-top: 5px;
@@ -225,6 +230,9 @@ ul {
 	/*	border:1px solid grey;*/
 		background-color: white
 	}
+	.glyphicon {
+   	 float: right;
+   	}
 	.newImgName {
 		width:100%;
 		height: 30px;
@@ -249,7 +257,20 @@ ul {
 	    overflow: hidden;
 	    text-overflow: ellipsis;
 	    word-break: break-all;
-	    display: block;
+	  /*  display: block;*/
+	}
+	.remove {
+		display: inline-block;
+    	vertical-align: top;
+    	margin-right: 2px;
+	}
+	.tag_name {
+		max-width: 78%;
+	    margin-right: 14%;
+	    overflow: hidden;
+	    text-overflow: ellipsis;
+	    word-break: break-all;
+	    display: inline-block;
 	}
 	/*background-image: url("http://i.stack.imgur.com/2OrtT.jpg");
 	    background-size: cover;
@@ -290,7 +311,7 @@ ul {
 		    background-position: 50% 50%;
 		}
 		.imgBox_info {
-			width: 40%;
+			width: 58%;
 		    display: inline-block;
 		    margin-left: 0px;
 		    vertical-align: top;
@@ -301,7 +322,9 @@ ul {
 			padding:1%;
 			font-size: 11px;
 			background-color: white
-
+		}
+		.newTags{
+			height: 89px
 		}
 	}
 	
