--- a/styles/main.css
+++ b/styles/main.css
@@ -72,10 +72,15 @@ ul {
 			padding:1%;
 		}
 
+		.tags {
+			background-color: white;
+			padding:1%;
+		}
 		.tag {
 			background-color: white;
 			color: rgb(172, 32, 35);
 			border-color: rgb(172, 32, 35);
+			display: inline-block;
 		}
 		.button-primary, button.button-primary, input[type="submit"].button-primary, input[type="reset"].button-primary, input[type="button"].button-primary {
 			color: #FFF;
@@ -94,6 +99,7 @@ ul {
 		    border-bottom-color: #6b808d;
 		}
 	/*INDEX-THUMBNAILS*/
+
 	.download {
 		float: right;
 		background-color: white;
@@ -139,11 +145,11 @@ ul {
 	.howTo {
 		position: absolute;
 		top:150px;
-		left:500px; 
+		left:350px; 
 		padding:10px;
 		width:300px;
 		z-index: 99999;
-		background-color: red;
+		/*background-color: red;*/
 	}
 
 
@@ -271,6 +277,7 @@ ul {
 	    text-overflow: ellipsis;
 	    word-break: break-all;
 	    display: inline-block;
+	    vertical-align: middle;
 	}
 	/*background-image: url("http://i.stack.imgur.com/2OrtT.jpg");
 	    background-size: cover;
@@ -302,6 +309,18 @@ ul {
 		button  {
 			display:block;
 		}
+		.photo {
+		    display: inline-block;
+		    width: 45%;
+		}
+		.nav_logo {
+		    width: 42%;
+		}
+		.thumbnail {
+		    width: 85%;
+		    height: auto;
+		    margin-left: 8%;
+		}
 		.imgBox_photo {
 	    	width: 40%;
 			height: 150px;
@@ -326,6 +345,60 @@ ul {
 		.newTags{
 			height: 89px
 		}
+	}
+	@media (max-width: 540px) {
+		.photo {
+		    display: inline-block;
+		    width: 90%;
+		}
+		.thumbnails {
+		    border: 0;
+		}
+		.thumbnail_label {
+		    margin-bottom: 9%;
+		}
+		.thumbnail {
+		    width: 85%;
+		    height: auto;
+		    margin-left: 8%;
+		}
+		.left_col {
+			position: initial;
+		    width: 100%;
+		    height: auto;
+		    background-color: white;
+		    padding-top: 2%;
+		    padding-left: 3%;
+		    margin:0px;
+		}
+		.right_col {
+			position: initial;
+		    width: 100%;
+		    height: 100%;
+		    background-color: #e8eded;
+		    margin:0px;
+		    padding-top: 20px;
+
+		}
+		.addImg_buttons {
+		    padding-bottom: 20px;
+		}
+		.container {
+		    padding: 0px; 
+		    margin:0px;
+		}
+		.logo {
+		    width: 80%;
+		    height: auto;
+		    margin-bottom: 5%;
+		}
+		.list-group {
+    		margin-bottom: 0px; 
+		}
+		.current_thumbnails {
+		 margin-top: 0%; 
+		}
+
 	}
 	
 /****** Style Star Rating Widget *****/
