--- a/styles/main.css
+++ b/styles/main.css
@@ -10,7 +10,7 @@ body {
 	font-size: 16px;
 /*	font-weight: 600;*/
 	line-height: 2;
-	background-color: 	#efeeeb;
+	background-color: #efeeeb;
 	
 
 }
@@ -47,6 +47,7 @@ ul {
 		.nav>li {
 		    position: relative;
 		    display: inline-block;
+		    margin-bottom: 0px; 
 
 		}
 		.navbar-default .navbar-nav>li>a, a{
@@ -62,6 +63,8 @@ ul {
 			float: right;
 			vertical-align: baseline;
 			font-weight: bold;
+			
+		
 		}
 		.nav_logo {    
 		    width: 30%;
@@ -137,9 +140,10 @@ ul {
 
 /*HOW TO STYLES*/
 	.shadow {
-		-webkit-box-shadow: 10px 10px 129px 32px rgba(19,135,237,1);
-		-moz-box-shadow: 10px 10px 129px 32px rgba(19,135,237,1);
-		box-shadow: 10px 10px 129px 32px rgba(19,135,237,1);
+		/*#a51c30*/
+		-webkit-box-shadow: 10px 10px 129px 32px rgba(165,28,48,1);
+		-moz-box-shadow: 10px 10px 129px 32px rgba(165,28,48,1);
+		box-shadow: 10px 10px 129px 32px rgba(165,28,48,1);
 	}
 	.left {
 			float: right;
@@ -220,7 +224,7 @@ ul {
 	    left: 0;
 	    width: 30%;
 	    height: 100%;
-	    background-color: white;
+	    background-color: #e7e6e4;
 	    padding-top: 2%;
 	    padding-left: 3%
 	}
@@ -230,7 +234,7 @@ ul {
 	    left: 30%;
 	    width: 70%;
 	    height: 100%;
-	    background-color: #e8eded;;
+	    background-color: #efeeeb;
 	}
 	.list-group-item {
 		display: block;
