--- a/styles/main.css
+++ b/styles/main.css
@@ -12,8 +12,13 @@ body {
 	line-height: 2;
 	background-color: #efeeeb;
 }
+.center {
+	text-align: center;
+}
 
-
+.ital {
+	font-style: italic;
+}
 ul {
 	list-style-type: none;
 	/*margin-top: 2%;*/
@@ -231,6 +236,13 @@ ul {
 		font-weight: 600;
 		font-size: 12px;
 	}
+	#upload {
+			width: 90%;
+			margin-bottom:5px;
+	}
+	#save, #done {
+		width: 44%;
+	}
 	#upload, #save {
 		background-color: white;
     	color: rgb(172, 32, 35);
@@ -406,6 +418,18 @@ ul {
 		    margin-bottom:0px;
 	}
 	/*footer*/
+	#authorize-div {
+		display: block;
+	    text-align: center;
+	    background: white;
+	    padding: 20px;
+	    position: absolute;
+	    top: 0;
+	    left: 0;
+	    z-index: 999;
+	    width: 100%;
+	    height: 100%;
+	}
 	/*MEDIA QUERIES*/
 	@media (max-width: 761px) {
 		#upload {
