--- a/styles/main.css
+++ b/styles/main.css
@@ -14,6 +14,10 @@ body {
 }
 .center {
 	text-align: center;
+    width: 100%;
+    vertical-align: middle;
+    padding: 2px;
+    margin-bottom: 0px
 }
 
 .ital {
@@ -33,25 +37,9 @@ ul {
 }
 
 /*INDEX STYLES-GENERAL*/
-	.onload {
-		padding:10px;
-		background-color: white;
-		border: 2px solid rgb(172, 32, 35);
-		position: absolute;
-		left:200px;
-		top:120px;
-		z-index: 9999999;
-	}
-	.onload h5 {
-		margin-top: 15%;
-		padding:8px;
-	}
 	
-	.onload .glyphicon {
-		color: rgb(172, 32, 35);
-		float:right;
-
-	}
+	
+	
 	/*INDEX-HEADER*/
 		h1 { 
 			font-size: 1.5em; 
@@ -67,9 +55,13 @@ ul {
 			line-height: 50px;
 
 		}
-		.nav>li>a>:hover {
-   			/*display: inline;*/
+		/*.nav>li>a>:hover {
+   			display: inline;
     		background: none;
+		}*/
+		.nav>.nav_logo>a:hover {
+		    text-decoration: none;
+		    background-color:  #a51c30!important;
 		}
 		.nav>li {
 		    position: relative;
@@ -498,9 +490,7 @@ ul {
 	}
 
 	@media (max-width: 540px) {
-		.onload {
-		    left: 130px;
-		}
+		
 		.photo {
 		    display: inline-block;
 		    width: 90%;
@@ -593,9 +583,6 @@ ul {
 	}
 
 	@media (max-width: 420px) {
-		.onload {
-		    left: 80px;
-		}
 		.howTo {
 		    left: 6%;
 		    width:300px;
@@ -615,10 +602,6 @@ ul {
     	}
 	}
 	@media (max-width: 398px) {
-		.onload {
-		    left: 45px;
-		    top: 170px;
-		}
 		.howTo {
 		    width:250px; 
 		}
@@ -659,9 +642,6 @@ ul {
 		}
 	}
 	@media (max-width: 284px) {
-		.onload {
-		    left: 30px;
-		}
 		.howTo {
 		    width:230px;
 		    font-size: 12px;
