--- a/styles/main.css
+++ b/styles/main.css
@@ -475,6 +475,10 @@ ul {
 	    width: 100%;
 	    height: 100%;
 	}
+	#authorize-button {
+		margin: 0 auto;
+		margin-top: 3%;
+	}
 	/*MEDIA QUERIES*/
 	@media (max-width: 761px) {
 		#upload {
@@ -556,6 +560,7 @@ ul {
     		margin-bottom: 30%;
 		}
 		.thumbnail {
+			margin-top: 8%;
 		    width: 85%;
 		    height: auto;
 		    margin-left: 8%;
