--- a/styles/main.css
+++ b/styles/main.css
@@ -560,6 +560,7 @@ ul {
     		margin-bottom: 30%;
 		}
 		.thumbnail {
+			margin-top: 8%;
 		    width: 85%;
 		    height: auto;
 		    margin-left: 8%;
