Updating gh-pages from master branch via GitBot

--- a/styles/main.css
+++ b/styles/main.css
@@ -335,6 +335,7 @@ ul {
 	    background-color: #e7e6e4;
 	    padding-top: 2%;
 	    padding-left: 3%
+	    overflow: auto;
 	}
 	.right_col {
 	    position: absolute;
@@ -343,6 +344,7 @@ ul {
 	    width: 70%;
 	    height: 100%;
 	    background-color: #efeeeb;
+	    overflow: auto;
 	}
 	.list-group-item {
 		display: block;
